fix: overflowed x

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: 'Times';
@@ -9,9 +16,7 @@ a {
   color: black;
   text-decoration: none;
 }
-* {
-  box-sizing: border-box;
-}
+
 .sticky {
   position: sticky;
   bottom: 0;
